# Exp-Template

./: .gitignore  README.md  TEMPLATE_USAGE.md  pyproject.toml
notebooks/: exp_ex.ipynb
src/myproject/: __init__.py
tests/: test_init.py
